--- a/3----Knowledg_Resume/index.html
+++ b/3----Knowledg_Resume/index.html
@@ -69,6 +69,14 @@
         </div>
       </li>
 
+      <li>
+        <div>
+          <h3><i class="fas fa-chevron-right"></i> 2019-( Nov-Dec ): Stya tuned for more updates </h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consequuntur soluta eum veniam nam
+            recusandae eligendi facilis eos totam consectetur!</p>
+        </div>
+      </li>
+
     </ul>
   </section>
   <script src="main.js"></script>
