--- a/3----knowledge_resume/index.html
+++ b/3----knowledge_resume/index.html
@@ -71,7 +71,7 @@
 
       <li>
         <div>
-          <h3><i class="fas fa-chevron-right"></i> 2019-( Nov-Dec ): Stya tuned for more updates </h3>
+          <h3><i class="fas fa-chevron-right"></i> 2019-( Dec++ ): Stya tuned for more updates </h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consequuntur soluta eum veniam nam
             recusandae eligendi facilis eos totam consectetur!</p>
         </div>
