--- a/3----knowledge_resume/index.html
+++ b/3----knowledge_resume/index.html
@@ -23,63 +23,68 @@
     <ul>
       <li>
         <div>
-          <h3><i class="fas fa-chevron-right"></i> 2018-( June-Nov ) : Core Java</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consequuntur soluta eum veniam nam
-            recusandae eligendi facilis eos totam consectetur!</p>
+          <h3><i class="fas fa-chevron-right"></i> 2018-( July-Nov ) : Core Java</h3>
+          <h4>Knowledge level : Good</h4>
+          <p>Language basics such as operators , keywords , Methods and datatypes, OOPS concepts, Collection
+            framework, Generics, Exception Handling, Multi threading and etc.</p>
         </div>
       </li>
 
       <li>
         <div>
           <h3><i class="fas fa-chevron-right"></i> 2018-( July-Nov ) : Adv-Java</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consequuntur soluta eum veniam nam
-            recusandae eligendi facilis eos totam consectetur!</p>
+          <h4>Knowledge level : Basics</h4>
+          <p>JDBC, Servlets, JSP, Concurrent-Collection, Advanced Multi-threading and etc.</p>
         </div>
       </li>
 
       <li>
         <div>
           <h3><i class="fas fa-chevron-right"></i> 2018-( Sep-Nov ) : Jpa/Hibernate</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consequuntur soluta eum veniam nam
-            recusandae eligendi facilis eos totam consectetur!</p>
+          <h4>Knowledge level : Basics</h4>
+          <p>Basics of Jpa & Hibernate, ORM (Object Relational Mapping), CURD Operations, Hibernate Mapping and etc.</p>
         </div>
       </li>
 
       <li>
         <div>
-          <h3><i class="fas fa-chevron-right"></i> 2018-2019-( Oct-Jan ) : Spring-Framework 5</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consequuntur soluta eum veniam nam
-            recusandae eligendi facilis eos totam consectetur!</p>
+          <h3><i class="fas fa-chevron-right"></i> 2018-2019 ( Oct-Jan ) : Spring-Framework 5.x</h3>
+          <h4>Knowledge level : Basics</h4>
+          <p>Spring Core, Spring MVC(WEB), Spring ORM and etc.</p>
         </div>
       </li>
 
       <li>
         <div>
-          <h3><i class="fas fa-chevron-right"></i> 2019-( Oct-Nov ): HTML & CSS Project-Based</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consequuntur soluta eum veniam nam
-            recusandae eligendi facilis eos totam consectetur!</p>
+          <h3><i class="fas fa-chevron-right"></i> 2019-( Oct-Nov ) : HTML & CSS Project-Based</h3>
+          <h4>Knowledge level : Basics</h4>
+          <p>Basics of HTML5 & CSS3, Responsive web design and etc.</p>
         </div>
       </li>
 
       <li>
         <div>
-          <h3><i class="fas fa-chevron-right"></i> 2019-( Nov-Dec ): HTML & CSS-Indepth & Projects</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consequuntur soluta eum veniam nam
-            recusandae eligendi facilis eos totam consectetur!</p>
+          <h3><i class="fas fa-chevron-right"></i> 2019-( Nov-Dec ) : HTML & CSS-Indepth & Projects</h3>
+          <h4>Knowledge level : Good</h4>
+          <p>HTML5 & CSS3, Flexbox, Advanced Selectors, Animation, CSS Grid and
+            Basic of CSS preprocessor = Sass( scss ) and etc.</p>
         </div>
       </li>
 
       <li>
         <div>
-          <h3><i class="fas fa-chevron-right"></i> 2019-( Dec++ ): Stya tuned for more updates </h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consequuntur soluta eum veniam nam
-            recusandae eligendi facilis eos totam consectetur!</p>
+          <h3><i class="fas fa-chevron-right"></i> 2019-2020 ( Dec-Jan ): Modern JavaScript (ES6+) </h3>
+          <h4>Knowledge level : Good Beginner level</h4>
+          <p>Functions & Methods, Object Literals, Document Object Model (DOM), Array Methods, Local Storage, Object
+            Oriented JavaScript(OOP), Database (Firebase-firestore), ES6 Features & Basics of Fetch API and etc.</p>
         </div>
       </li>
 
     </ul>
   </section>
   <script src="main.js"></script>
+
+
 </body>
 
 </html>
