--- a/3----knowledge_resume/index.html
+++ b/3----knowledge_resume/index.html
@@ -32,30 +32,6 @@
 
       <li>
         <div>
-          <h3><i class="fas fa-chevron-right"></i> 2018-( July-Nov ) : Adv-Java</h3>
-          <h4>Knowledge level : Basics</h4>
-          <p>JDBC, Servlets, JSP, Concurrent-Collection, Advanced Multi-threading and etc.</p>
-        </div>
-      </li>
-
-      <li>
-        <div>
-          <h3><i class="fas fa-chevron-right"></i> 2018-( Sep-Nov ) : Jpa/Hibernate</h3>
-          <h4>Knowledge level : Basics</h4>
-          <p>Basics of Jpa & Hibernate, ORM (Object Relational Mapping), CURD Operations, Hibernate Mapping and etc.</p>
-        </div>
-      </li>
-
-      <li>
-        <div>
-          <h3><i class="fas fa-chevron-right"></i> 2018-2019 ( Oct-Jan ) : Spring-Framework 5.x</h3>
-          <h4>Knowledge level : Basics</h4>
-          <p>Spring Core, Spring MVC(WEB), Spring ORM and etc.</p>
-        </div>
-      </li>
-
-      <li>
-        <div>
           <h3><i class="fas fa-chevron-right"></i> 2019-( Oct-Nov ) : HTML & CSS Project-Based</h3>
           <h4>Knowledge level : Basics</h4>
           <p>Basics of HTML5 & CSS3, Responsive web design and etc.</p>
@@ -64,7 +40,7 @@
 
       <li>
         <div>
-          <h3><i class="fas fa-chevron-right"></i> 2019-( Nov-Dec ) : HTML & CSS-Indepth & Projects</h3>
+          <h3><i class="fas fa-chevron-right"></i> 2019-( Nov-Dec ) : HTML & CSS & SASS(scss) Project Based</h3>
           <h4>Knowledge level : Good</h4>
           <p>HTML5 & CSS3, Flexbox, Advanced Selectors, Animation, CSS Grid and
             Basic of CSS preprocessor = Sass( scss ) and etc.</p>
@@ -77,6 +53,14 @@
           <h4>Knowledge level : Good Beginner level</h4>
           <p>Functions & Methods, Object Literals, Document Object Model (DOM), Array Methods, Local Storage, Object
             Oriented JavaScript(OOP), Database (Firebase-firestore), ES6 Features & Basics of Fetch API and etc.</p>
+        </div>
+      </li>
+
+      <li>
+        <div>
+          <h3><i class="fas fa-chevron-right"></i> 2019-2020 ( Jan-Feb ): Bootstrap 4.x </h3>
+          <h4>Knowledge level : Good Beginner level</h4>
+          <p>Utilities, CSS Components, Grid System & Flexbox, JavaScript Widgets and etc.</p>
         </div>
       </li>
 
